# image-generation

./: .gitignore  Cargo.toml  make_all.sh
inputs/: l-system_gasket_animation.json  l-system_koch_island.json  newton_raphson_1.json  newton_raphson_animation.json  raytrace_basic_scene_1.json  raytrace_basic_scene_2.json  raytrace_basic_scene_3.json
inputs/l-system/: l-system_space_filling_3d.json  l-system_space_filling_animation.json
inputs/l-system/l-systems_determanistic_branching/: little_bush.json  tree_a.json  tree_b.json  tree_f.json
inputs/l-systems_determanistic_branching/: tree_c.json  tree_d.json  tree_e.json
inputs/newton_raphson/: newton_raphson_2.json  newton_raphson_animation.json  newton_raphson_gpu.json
inputs/raytrace/: raytrace_ambiant_lighting.json  raytrace_basic_scene_1.json  raytrace_basic_scene_2.json  raytrace_basic_scene_3.json
scripts/: profile_ray.py
src/: animation.rs  l_system.rs  main.rs  newton_ralphson.rs  newton_raphson.rs  newton_raphson.wgsl  ray.rs  sphere_scene.rs
src/ray/: geometry.rs  geometry2.rs  materials.rs  trace.rs
