[package]
name = "image-generation"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
num = "0.4.0"
image = "0.24.4"
cgmath = "0.18.0"
imageproc = "0.23.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon="1.7.0"